// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLink should render with active link 1`] = `
<body>
  <div>
    <span
      class="bg-sky-500 dark:text-neutral-50 flex items-center gap-3 py-2 px-3 font-medium"
    >
      <div>
        icon
      </div>
      Label
    </span>
  </div>
</body>
`;

exports[`NavLink should render with inactive link 1`] = `
<body>
  <div>
    <span
      class="text-neutral-400 hover:text-neutral-900 dark:hover:text-neutral-200 flex items-center gap-3 py-2 px-3 font-medium"
    >
      <div>
        icon
      </div>
      Label
    </span>
  </div>
</body>
`;
